--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 	</div>
 	</div>
 
-	<div class="cuarta"><a href="#imagen" class="cinco"><img src="imagenes/fantasia.jpg" width= 250></a>
+	<div class="cuarta"><a href="#imagen" class="cinco"><img src="imagenes/FANTASIA.jpg" width= 250></a>
 	<div class="seis" title="Seres magicos">
-	<p><img src="imagenes/fantasia.jpg" width=250></p>
+	<p><img src="imagenes/FANTASIA.jpg" width=250></p>
 	</div>
 	</div>
 
