--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	Soy buena en edición de videos, mi inspiración  se basa en la observación. 
 	</p></div>
 
-	<div id="dise"><img src="imagenes/diseño.png" width=350></div>
+	<div id="dise"><img src="imagenes/dise¤o.png" width=350></div>
 	
 	<div class="imagen"><a href="#imagen" class="abrir"><img src="imagenes/mavis.png" width= 300 height=250></a>
 	<div class="cuadro" title="Mavis">
@@ -35,15 +35,15 @@
 	</div>
 	</div>
 
-	<div class="tercera"><a href="#imagen" class="tres"><img src="imagenes/sonic.jpg" width= 250></a>
+	<div class="tercera"><a href="#imagen" class="tres"><img src="imagenes/SONIC.jpg" width= 250></a>
 	<div class="cuatro" title="Sonic">
-	<p><img src="imagenes/sonic.jpg" width= 270></p>
+	<p><img src="imagenes/SONIC.jpg" width= 270></p>
 	</div>
 	</div>
 
-	<div class="cuarta"><a href="#imagen" class="cinco"><img src="imagenes/fantasia.jpg" width= 250></a>
+	<div class="cuarta"><a href="#imagen" class="cinco"><img src="imagenes/FANTASIA.jpg" width= 250></a>
 	<div class="seis" title="Seres magicos">
-	<p><img src="imagenes/fantasia.jpg" width=250></p>
+	<p><img src="imagenes/FANTASIA.jpg" width=250></p>
 	</div>
 	</div>
 
